Const all lets; lol

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="app-container">
             <div class="app-header">
                 <h1>Invoice Creator</h1>
-                <p>Thanks for choosing GoodCorp, LLC!</p>
+                <p>Thanks for choosing Obinna, LLC!</p>
             </div>
             <div class="app-body-container">
                 <div class="services-container">
@@ -29,15 +29,7 @@
                 </div>
                 <div class="invoiced-item-container">
                     <h4 id="invoiced-items"></h4>
-                    <h4 id="item-cost">$<span id="price-el">12</span></h4>
-                </div>
-                <div class="invoiced-item-container">
-                    <h4>Mow Lawn</h4>
-                    <h4 id="item-cost">$<span>20</span></h4>
-                </div>
-                <div class="invoiced-item-container">
-                    <h4>Pull Weeds</h4>
-                    <h4 id="item-cost">$<span>30</span></h4>
+                    <h4><span id="currency"></span><span id="price-el"></span></h4>
                 </div>
                 <div class="seperating-line"></div>
                 <div class="notes-total">
@@ -46,7 +38,7 @@
                 </div>
                 <div class="total-sum-container">
                     <h4><span>We accept cash, credit card, or PayPal</span></h4>
-                    <h4 id="total-sum">$60</h4>
+                    <h4 id="total-sum">$0</h4>
                 </div>
                 <button id="send-invoice-btn"><img  src="Mail icon.png" alt="send invoice">Send Invoice</button>
             </div>
