Fix remove buttons

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                 </div>
                 <div class="invoiced-item-container">
                     <h4 id="invoiced-items"></h4>
+                    <div id="invoice-remover-container">
+                        <p id="remove-btn-el"></p>
+                        <p id="remove-btn-el-lawn"></p>
+                        <p id="remove-btn-el-weed"></p>
+                    </div>
                     <h4><span id="currency"></span><span id="price-el"></span></h4>
                 </div>
                 <div class="seperating-line"></div>
